Module 1 Assignment (Committing again)

--- a/Module01_Assignment.ipynb
+++ b/Module01_Assignment.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/alecmucz/CSC467/blob/master/Module01_Assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "PfwTNrWJE_EK"
       },
       "source": [
@@ -42,12 +32,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "EPy11r-TFNtt",
-        "outputId": "b1c05330-1458-403b-b5c9-8b35697cfc86",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
-        }
+        },
+        "id": "EPy11r-TFNtt",
+        "outputId": "b1c05330-1458-403b-b5c9-8b35697cfc86"
       },
       "execution_count": 14,
       "outputs": [
@@ -62,6 +52,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JPykMhDeNMI0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -89,12 +88,12 @@
         "plt.imshow(frame)"
       ],
       "metadata": {
-        "id": "0OlDzzByGtu6",
-        "outputId": "3db693b9-234e-4aa4-d296-725e94f37d16",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 413
-        }
+        },
+        "id": "0OlDzzByGtu6",
+        "outputId": "3db693b9-234e-4aa4-d296-725e94f37d16"
       },
       "execution_count": 33,
       "outputs": [
@@ -126,8 +125,7 @@
       "name": "python"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
